fix: remove broken styles

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -51,7 +51,6 @@ body {
 	font-family: var(--font-family);
 	color: var(--text-color);
 	background-color: var(--background-color);
-	overflow: hidden;
 }
 
 .visually-hidden {
@@ -338,7 +337,6 @@ h2 + .header-anchor {
 	position: absolute;
 	left: 0;
 	bottom: 0;
-	overflow: hidden;
 	margin: 1em 0;
 	z-index: var(--z-top);
 }
@@ -419,9 +417,8 @@ h2 + .header-anchor {
 		height: auto;
 		bottom: 0;
 		z-index: var(--z-bottom);
-		transform: translate(30%, 5%);
+		transform: translate(30%, 15%);
 		clip-path: inset(30% 0 0 0);
-		overflow: hidden;
 	}
 
 	.footer__text {
